--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "@types/nodemailer": "^6.4.14",
     "env-cmd": "^10.1.0",
     "mysql2": "^3.8.0",
+    "nodemailer": "^6.9.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.19"
+    "typeorm": "^0.3.19",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
