--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/typeorm": "^10.0.1",
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "env-cmd": "^10.1.0",
     "mysql2": "^3.8.0",
     "nodemailer": "^6.9.8",
